# sp2text

./: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml
archive/: code_s2t.py
output/: transcript_2025-11-29_00-10-25.txt  transcript_2025-11-29_00-11-03.txt  transcript_2025-11-29_00-15-18.txt
src/: cli.py  code_s2t.py  code_whisper_s2t.py  simple.py
